# Proteges-PyEs

./: .gitignore  App.js  MANUAL_INSTALACION.md  app.json  config.js  package-lock.json  package.json
arduino/: rfid_reader.ino  rfid_writer.ino
components/: Button.js  Card.js  Input.js  PremiumButton.js  ScannerOverlay.js  ScreenWrapper.js
constants/: appConstants.js  errorMessages.js  index.js  scanTypes.js  (+1 more)
proteges_pyes_s_backend/: .gitignore  Cargo.toml  proteges_pyes_s.db
proteges_pyes_s_backend/migrations/: 0001_estudiantes.sql  0002_usuarios.sql  0003_grupos.sql  0004_asistencias.sql  0005_historial_consulta.sql  0006_add_card_uid_to_estudiantes.sql  0007_add_performance_indexes.sql  0008_push_tokens.sql  0009_justificantes.sql  0010_system_state_and_emergency_history.sql
proteges_pyes_s_backend/src/: constants.rs  db.rs  main.rs  state.rs
proteges_pyes_s_backend/src/handlers/: attendance_handlers.rs  auth_handlers.rs  emergency_handlers.rs  group_handlers.rs  justification_handlers.rs  mod.rs  notification_handlers.rs  parent_handlers.rs  scan_handlers.rs  stats_handlers.rs  student_handlers.rs  user_handlers.rs
proteges_pyes_s_backend/src/models/: attendance.rs  group.rs  justification.rs  mod.rs  notification.rs  scan.rs  student.rs  user.rs
proteges_pyes_s_backend/src/routes/: attendance_routes.rs  auth_routes.rs  emergency_routes.rs  group_routes.rs  justification_routes.rs  mod.rs  notification_routes.rs  parent_routes.rs  scan_routes.rs  stats_routes.rs  student_routes.rs  user_routes.rs
proteges_pyes_s_backend/src/utils/: notifications.rs
(+42 files in other folders)
