[package]
name = "proteges_pyes_s_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
